fix contrast

--- a/css/index.css
+++ b/css/index.css
@@ -657,7 +657,7 @@ ul{
 }
 .pricing .pricing-table-body ul li{
 	font-weight: 300;
-	color: #777777;
+	color: #322f2f;
 	margin-bottom: 15px;
 	position: relative;
 	padding-left: 30px;
